# CrystaLyse.AI

./: .gitignore  AI4Crystals.md  CANVAS.md  CHANGELOG.md  CLAUDE.md  CRYSTALYSE_TEST_SEQUENCE.md  EXPERIMENTAL_PLAN.md  Lecture9.ipynb  MCP_INTEGRATION_FIX.md  PROJECT_STATUS.md  README.md  READMEFORLLMS.md  STATUS.md  TECHNICAL_ANALYSIS_REPORT.md  VISION.md  debug_detailed_tool_calls.py  debug_mcp_connection.py  debug_mcp_protocol.py  debug_mcp_tools.py  debug_smact_startup.py  debug_tool_calling.py  mcp-how-to.md  mkdocs.yml  pyproject.toml  run_comprehensive_tests.py  scratchpadchem4crys.md  test_agent_basic.py  test_agent_minimal.py  test_battery_discovery.py  test_complete_pipeline.py  test_corrected_battery_discovery.py  test_crystalyse_smact_tools.py  test_deployment.py  test_dual_mode.py  test_fixed_pipeline.py  test_fixed_tool_detection.py  test_integration.py  test_mcp_client_direct.py  test_mcp_tools.py  test_minimal_agent_mcp.py  (+12 more)
.github/: dependabot.yml  pull_request_template.md
complete_workflow/: example_workflows.py  integration_test_full.py  integration_test_summary_20250613_174052.json  mode_comparison_20250613_174052.json  simple_mace_test.py  test_mace_integration.py
comprehensive_test_results/: summary_report.md
crystalyse/: __init__.py  cli.py  config.py  interactive_shell.py  unified_agent.py
crystalyse-cli/: API_REFERENCE.md  IMPLEMENTATION_NOTES.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
dev/: .pre-commit-config.yaml  (+4 more)
dev/chemistry-creative-server/: pyproject.toml
dev/chemistry-creative-server/src/chemistry_creative/: server.py
(+305 files in other folders)
